rev_1/elb.tf
#Load balancer security Group allows HTTP
resource "aws_security_group" "allow_http" {
  name        = "allow_http"
  description = "Allow TLS inbound traffic"
  ingress {

    description = "HTTP Entry"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]

  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "allow_http"
  }
}


resource "aws_lb" "alb" {
  name               = "test-lb-tf"
  internal           = false
  load_balancer_type = "application"
  security_groups    = ["${aws_security_group.SG_Private.id}"] #double check with web sg
  #availability_zones = ["us-east-1a", "us-east-1b"]
  subnets = [ "${aws_subnet.Public_Subnet_1.id}", "${aws_subnet.Public_Subnet_2.id}" ]

  enable_deletion_protection = false

  
}

resource "aws_lb_target_group" "targetGroup" {
  name = "targetGroup"
  port = 80
  protocol = "HTTP"
  vpc_id = "${aws_vpc.VPC_SenrDesign.id}"
  target_type = "instance"


}
#TBD
resource "aws_lb_target_group_attachment" "test" {
  target_group_arn = "${aws_lb_target_group.targetGroup.arn}"
  target_id        = "${aws_instance.EC2_Public_Subnet2.id}"
  port             = 80
}

resource "aws_autoscaling_attachment" "asg_attachment_bar" {
  autoscaling_group_name = "${aws_autoscaling_group.asg.id}"
  alb_target_group_arn   = "${aws_lb_target_group.targetGroup.arn}"
}


#creating base image that we want to replicate
resource "aws_ami_from_instance" "web_server_ami" {
  name               = "web_server_ami"
  source_instance_id = "${aws_instance.EC2_Public_Subnet2.id}"
}

resource "aws_launch_configuration" "launchConfig" {
  image_id      = "${aws_ami_from_instance.web_server_ami.id}"
  instance_type = "t2.micro"
  name = "launchConfig"
  enable_monitoring = "true"
  security_groups = ["${aws_security_group.SG_Private.id}"]
  key_name = "tf_test"

}

resource "aws_autoscaling_group" "asg" {
  name = "asg"
  launch_configuration = "${aws_launch_configuration.launchConfig.id}"
  vpc_zone_identifier       = [ "${aws_subnet.Private_Subnet_1.id}", "${aws_subnet.Private_Subnet_2.id}" ]
  availability_zones = ["us-east-1c", "us-east-1d"]
  max_size           = 6
  min_size           = 2
  target_group_arns = ["${aws_lb_target_group.targetGroup.arn}"]
  health_check_type = "EC2"
  health_check_grace_period = 300


}

resource "aws_autoscaling_policy" "scalingPolicy" {
  name = "scalingPolicy"
  autoscaling_group_name = "${aws_autoscaling_group.asg.name}"
  policy_type = "TargetTrackingScaling"

  target_tracking_configuration {
  predefined_metric_specification {
    predefined_metric_type = "ASGAverageCPUUtilization"
  }

  target_value = 60.0
}

}
